--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # ignore all Rhistory files
 *.Rhistory
-# ignore unnecessary cad gwas
+# ignore unnecessary & large cad gwas
 DataCleaningScripts\data\cad.additive.Oct2015.pub.zip
+DataCleaningScripts\data\cad.add.160614.website.txt
+DataCleaningScripts\data\cad.add.readme
 DataCleaningScripts\data\cad.txt
